--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"React"
 	],
 	"dependencies": {
+		"@brj-typescript/global-context": "^1.0",
+		"@brj-typescript/ui": "^1.0",
 		"@types/jest": "~27.0.3",
 		"@types/node": "^17.0.14",
 		"@types/react": "^18.0.12",
