--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@brj-typescript/documentation",
-	"version": "1.0.0",
+	"version": "1.0.2",
 	"description": "BRJ Documentation.",
 	"main": "index.js",
 	"module": "./lib/index.js",
@@ -32,12 +32,12 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.0.4",
 		"@types/jest": "~27.0.3",
+		"jest": "~27.0.6",
 		"prettier": "2.6.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
-		"jest": "~27.0.6",
-		"ts-node": "^10.9.1",
-		"ts-jest": "~27.0.7"
+		"ts-jest": "~27.0.7",
+		"ts-node": "^10.9.1"
 	},
 	"bugs": {
 		"url": "https://github.com/brj-typescript/documentation/issues"
